@@ -45,25 +45,41 @@ extern "C" {
 #include <limits.h>
 #include <stdlib.h>
 
+// R: Rather use C99 -- which we require in R anyway
+#include <inttypes.h>
+
 /* ========================================================================== */
 /* === SuiteSparse_long ===================================================== */
 /* ========================================================================== */
 
+/*------->>>>>>>>>>>>>>>>>>>>>> Sync the section below with <<<<<<<<<<<<<<<<<<<<
+ * ../../inst/include/cholmod.h
+ * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 #ifndef SuiteSparse_long
 
-#ifdef _WIN64
+// -----> for Matrix in R -- replace these by the SuiteSparse_long* defs below :
+/* #ifdef _WIN64 */
 
-#define SuiteSparse_long __int64
-#define SuiteSparse_long_max _I64_MAX
-#define SuiteSparse_long_idd "I64d"
+/* #define SuiteSparse_long __int64 */
+/* #define SuiteSparse_long_max _I64_MAX */
+/* #define SuiteSparse_long_idd "I64d" */
 
-#else
+/* #else */
 
-#define SuiteSparse_long long
-#define SuiteSparse_long_max LONG_MAX
-#define SuiteSparse_long_idd "ld"
+/* #define SuiteSparse_long long */
+/* #define SuiteSparse_long_max LONG_MAX */
+/* #define SuiteSparse_long_idd "ld" */
 
-#endif
+/* #endif */
+
+#define SuiteSparse_long int64_t
+    // typically long (but on WIN64)
+#define SuiteSparse_long_max 9223372036854775801
+    // typically LONG_MAX (but ..)
+#define SuiteSparse_long_idd PRId64
+    // typically "ld"
+//--------------------------------- end of changes for Matrix in R ---
+
 #define SuiteSparse_long_id "%" SuiteSparse_long_idd
 #endif
 
